# SlangBase

./: CMakeLists.txt  Doxyfile  Editor.cpp  Editor.h  FileData.cpp  FileData.h
controllers/: TabController.cpp  TabController.h
docs/: design.xcf  readme.md
docs/doxygen/html/: _editor_8cpp.html  _editor_8cpp__incl.map  _editor_8cpp__incl.md5  _editor_8h.html  _editor_8h__dep__incl.map  _editor_8h__dep__incl.md5  _editor_8h__incl.map  _editor_8h__incl.md5  _editor_8h_source.html  _editor_tab_8h.html  _editor_tab_8h__dep__incl.map  _editor_tab_8h__dep__incl.md5  _editor_tab_8h__incl.map  _editor_tab_8h__incl.md5  _editor_tab_8h_source.html  _file_8h.html  _file_8h__incl.map  _file_8h__incl.md5  _file_8h_source.html  _file_data_8h_source.html  _tab_controller_8cpp.html  _tab_controller_8cpp__incl.map  _tab_controller_8cpp__incl.md5  _tab_controller_8h.html  _tab_controller_8h__dep__incl.map  _tab_controller_8h__dep__incl.md5  _tab_controller_8h__incl.map  _tab_controller_8h__incl.md5  _tab_controller_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_app__coll__graph.md5  class_app__inherit__graph.md5  class_editor-members.html  class_editor.html  class_editor__coll__graph.md5  class_editor__inherit__graph.md5  class_file_data-members.html  class_file_data.html  (+51 more)
docs/doxygen/latex/: _editor_8cpp.tex  _editor_8cpp__incl.md5  _editor_8h.tex  _editor_8h__dep__incl.md5  _editor_8h__incl.md5  _editor_tab_8h.tex  _editor_tab_8h__dep__incl.md5  _editor_tab_8h__incl.md5  _file_8h.tex  (+38 more)
io/: File.cpp  File.h
views/: EditorTab.cpp  EditorTab.h
(+25 files in other folders)
